change in structure
change in structure

--- a/templates/email_monitor/contacts_list.html
+++ b/templates/email_monitor/contacts_list.html
@@ -1333,8 +1333,7 @@ async function submitNewContact(event) {
         const response = await fetch('/monitor/api/add-contact/', {
             method: 'POST',
             headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': getCsrfToken()
+                'Content-Type': 'application/json'
             },
             body: JSON.stringify(contactData)
         });
